--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Binaries for programs and plugins
+/bin/*
 *.exe
 *.exe~
 *.dll
@@ -11,6 +12,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 .cover
+.DS_Store
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
